# valkey-flash-sizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/flash_sizer/: __init__.py  __main__.py  _duration.py  _format.py  connect.py  main.py  project.py  report.py  sample.py  stats.py  version_detect.py
tests/: test_duration.py  test_format.py  test_integration.py  test_main.py  test_project.py  test_report.py  test_sample.py  test_stats.py  test_version_detect.py
tests/golden/: report.json  report.md
