[project]
name = "valkey-flash-sizer"
version = "0.1.0"
description = "Read-only analyzer that samples a Valkey keyspace and projects the RAM savings from tiering cold entries to NVMe via valkey-flash."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "valkey-flash contributors" }]
keywords = ["valkey", "redis", "nvme", "tiering", "analyzer", "sizing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "valkey>=6.1,<7",
    "click>=8.0,<9",
]

[project.scripts]
flash-sizer = "flash_sizer.main:main"

[project.urls]
Homepage = "https://github.com/mbocevski/valkey-flash-sizer"
Repository = "https://github.com/mbocevski/valkey-flash-sizer"
Issues = "https://github.com/mbocevski/valkey-flash-sizer/issues"
"Sibling project (module)" = "https://github.com/mbocevski/valkey-flash"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flash_sizer"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "PL"]
ignore = []

[tool.ruff.lint.pylint]
# Keyword-only APIs with a handful of tuning knobs are fine; the default
# cap of 5 is aimed at positional-arg sprawl. Sampler / projection / CLI
# entry points commonly land around 6–8.
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
